# ork_to_planning_scene

./: README.md
ork_to_planning_scene/: CMakeLists.txt  package.xml  setup.py
ork_to_planning_scene/config/: detection.object.kinect.ork  detection.object.ros.ork  tabletop_params.yaml
ork_to_planning_scene/include/ork_to_planning_scene/: ork_to_planning_scene.h
ork_to_planning_scene/launch/: ork_tabletop.launch
ork_to_planning_scene/python/ork_to_planning_scene/: server  server.py
ork_to_planning_scene/src/: main.cpp  ork_to_planning_scene.cpp
ork_to_planning_scene_msgs/: CMakeLists.txt  package.xml
ork_to_planning_scene_msgs/action/: UpdatePlanningSceneFromOrk.action
symbolic_name_tools/: CMakeLists.txt  package.xml
symbolic_name_tools/include/symbolic_name_tools/: symbolic_name_tools.h
symbolic_name_tools/src/: symbolic_name_tools.cpp
