<?xml version="1.0"?>
<package>
  <name>ork_to_planning_scene</name>
  <version>0.0.0</version>
  <description>The ork_to_planning_scene package</description>

  <maintainer email="c.dornhege@gmail.com">Christian Dornhege</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/ork_to_planning_scene</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>ecto_image_pipeline</build_depend>
  <build_depend>ecto_ros</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>object_recognition_core</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>object_recognition_ros</build_depend>
  <build_depend>ork_to_planning_scene_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>symbolic_name_tools</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>ecto</run_depend>
  <run_depend>ecto_image_pipeline</run_depend>
  <run_depend>ecto_ros</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>object_recognition_core</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>object_recognition_ros</run_depend>
  <run_depend>ork_to_planning_scene_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>symbolic_name_tools</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>

  
</package>
