<?xml version="1.0"?>
<package>
  <name>ork_to_planning_scene_msgs</name>
  <version>0.0.0</version>
  <description>The ork_to_planning_scene_msgs package</description>

  <maintainer email="c.dornhege@gmail.com">Christian Dornhege</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>

  <!-- <url type="website">http://wiki.ros.org/ork_to_planning_scene_msgs</url> -->

  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>object_recognition_msgs</run_depend>

  
</package>
