<?xml version="1.0"?>
<package>
  <name>symbolic_name_tools</name>
  <version>0.0.0</version>
  <description>The symbolic_name_tools package</description>

  <maintainer email="c.dornhege@gmail.com">Christian Dornhege</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/symbolic_name_tools</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  
</package>
